--- a/src/plugins/coreplugin/core.qrc
+++ b/src/plugins/coreplugin/core.qrc
@@ -53,5 +53,6 @@
         <file>editormanager/BinFiles.mimetypes.xml</file>
         <file>images/progressbar.png</file>
         <file>images/help.png</file>
+        <file>images/editclear.png</file>
     </qresource>
 </RCC>
