--- a/src/plugins/qt4projectmanager/customwidgetwizard/customwidgetwidgetswizardpage.ui
+++ b/src/plugins/qt4projectmanager/customwidgetwizard/customwidgetwidgetswizardpage.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>668</width>
-    <height>454</height>
+    <height>475</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,16 +17,6 @@
    <string>Custom Widget List</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="2" column="0">
-    <widget class="QLabel" name="label">
-     <property name="text">
-      <string>Widget &amp;Classes:</string>
-     </property>
-     <property name="buddy">
-      <cstring>classList</cstring>
-     </property>
-    </widget>
-   </item>
    <item row="2" column="1" rowspan="2">
     <widget class="QWidget" name="tabStackWidget" native="true">
      <property name="minimumSize">
@@ -69,6 +59,34 @@
       </size>
      </property>
     </spacer>
+   </item>
+   <item row="2" column="0">
+    <layout class="QHBoxLayout" name="horizontalLayout">
+     <item>
+      <widget class="QLabel" name="label">
+       <property name="text">
+        <string>Widget &amp;Classes:</string>
+       </property>
+       <property name="buddy">
+        <cstring>classList</cstring>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QToolButton" name="addButton">
+       <property name="text">
+        <string>...</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QToolButton" name="deleteButton">
+       <property name="text">
+        <string>...</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
    </item>
   </layout>
  </widget>
