--- a/src/plugins/cpaster/settingspage.ui
+++ b/src/plugins/cpaster/settingspage.ui
@@ -2,54 +2,16 @@
 <ui version="4.0">
  <class>CodePaster::SettingsPage</class>
  <widget class="QWidget" name="CodePaster::SettingsPage">
-  <layout class="QVBoxLayout" name="verticalLayout">
-   <item>
-    <widget class="QGroupBox" name="groupBox">
-     <property name="sizePolicy">
-      <sizepolicy hsizetype="Preferred" vsizetype="Maximum">
-       <horstretch>0</horstretch>
-       <verstretch>0</verstretch>
-      </sizepolicy>
-     </property>
-     <layout class="QFormLayout" name="formLayout">
-      <item row="0" column="0">
-       <widget class="QLabel" name="protocolLabel">
-        <property name="text">
-         <string>Default Protocol:</string>
-        </property>
-       </widget>
-      </item>
-      <item row="0" column="1">
-       <widget class="QComboBox" name="defaultProtocol"/>
-      </item>
-      <item row="1" column="0">
-       <widget class="QLabel" name="userNameLabel">
-        <property name="text">
-         <string>Username:</string>
-        </property>
-       </widget>
-      </item>
-      <item row="1" column="1">
-       <widget class="QLineEdit" name="userEdit"/>
-      </item>
-      <item row="2" column="0" colspan="2">
-       <widget class="QCheckBox" name="clipboardBox">
-        <property name="text">
-         <string>Copy Paste URL to clipboard</string>
-        </property>
-       </widget>
-      </item>
-      <item row="3" column="0" colspan="2">
-       <widget class="QCheckBox" name="displayBox">
-        <property name="text">
-         <string>Display Output Pane after sending a post</string>
-        </property>
-       </widget>
-      </item>
-     </layout>
-    </widget>
-   </item>
-   <item>
+  <property name="geometry">
+   <rect>
+    <x>0</x>
+    <y>0</y>
+    <width>281</width>
+    <height>229</height>
+   </rect>
+  </property>
+  <layout class="QGridLayout" name="gridLayout">
+   <item row="8" column="0" colspan="2">
     <spacer name="verticalSpacer">
      <property name="orientation">
       <enum>Qt::Vertical</enum>
@@ -61,6 +23,40 @@
       </size>
      </property>
     </spacer>
+   </item>
+   <item row="4" column="0" colspan="2">
+    <widget class="QCheckBox" name="displayBox">
+     <property name="text">
+      <string>Display Output Pane after sending a post</string>
+     </property>
+    </widget>
+   </item>
+   <item row="3" column="0" colspan="2">
+    <widget class="QCheckBox" name="clipboardBox">
+     <property name="text">
+      <string>Copy Paste URL to clipboard</string>
+     </property>
+    </widget>
+   </item>
+   <item row="1" column="1">
+    <widget class="QLineEdit" name="userEdit"/>
+   </item>
+   <item row="1" column="0">
+    <widget class="QLabel" name="userNameLabel">
+     <property name="text">
+      <string>Username:</string>
+     </property>
+    </widget>
+   </item>
+   <item row="0" column="1">
+    <widget class="QComboBox" name="defaultProtocol"/>
+   </item>
+   <item row="0" column="0">
+    <widget class="QLabel" name="protocolLabel">
+     <property name="text">
+      <string>Default protocol:</string>
+     </property>
+    </widget>
    </item>
   </layout>
  </widget>
