--- a/src/plugins/cpptools/cppfilesettingspage.ui
+++ b/src/plugins/cpptools/cppfilesettingspage.ui
@@ -6,77 +6,93 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>441</width>
-    <height>503</height>
+    <width>283</width>
+    <height>142</height>
    </rect>
   </property>
-  <layout class="QVBoxLayout" name="verticalLayout">
-   <item>
-    <widget class="QGroupBox" name="groupBox">
-     <property name="sizePolicy">
-      <sizepolicy hsizetype="Preferred" vsizetype="Maximum">
-       <horstretch>0</horstretch>
-       <verstretch>0</verstretch>
-      </sizepolicy>
+  <layout class="QFormLayout" name="formLayout">
+   <property name="fieldGrowthPolicy">
+    <enum>QFormLayout::ExpandingFieldsGrow</enum>
+   </property>
+   <item row="0" column="0">
+    <widget class="QLabel" name="headerSuffixLabel">
+     <property name="text">
+      <string>Header suffix:</string>
      </property>
-     <layout class="QFormLayout" name="formLayout">
-      <property name="fieldGrowthPolicy">
-       <enum>QFormLayout::ExpandingFieldsGrow</enum>
-      </property>
-      <item row="0" column="0">
-       <widget class="QLabel" name="headerSuffixLabel">
-        <property name="text">
-         <string>Header suffix:</string>
-        </property>
-       </widget>
-      </item>
-      <item row="0" column="1">
-       <widget class="QComboBox" name="headerSuffixComboBox"/>
-      </item>
-      <item row="1" column="0">
-       <widget class="QLabel" name="sourceSuffixLabel">
-        <property name="text">
-         <string>Source suffix:</string>
-        </property>
-       </widget>
-      </item>
-      <item row="1" column="1">
-       <widget class="QComboBox" name="sourceSuffixComboBox"/>
-      </item>
-      <item row="2" column="1">
-       <widget class="QCheckBox" name="lowerCaseFileNamesCheckBox">
-        <property name="text">
-         <string>Lower case file names</string>
-        </property>
-       </widget>
-      </item>
-      <item row="3" column="0">
-       <widget class="QLabel" name="licenseTemplateLabel">
-        <property name="text">
-         <string>License Template:</string>
-        </property>
-       </widget>
-      </item>
-      <item row="3" column="1">
-       <widget class="Utils::PathChooser" name="licenseTemplatePathChooser"/>
-      </item>
-     </layout>
     </widget>
    </item>
-   <item>
+   <item row="0" column="1">
+    <widget class="QComboBox" name="headerSuffixComboBox"/>
+   </item>
+   <item row="1" column="0">
+    <widget class="QLabel" name="sourceSuffixLabel">
+     <property name="text">
+      <string>Source suffix:</string>
+     </property>
+    </widget>
+   </item>
+   <item row="1" column="1">
+    <widget class="QComboBox" name="sourceSuffixComboBox"/>
+   </item>
+   <item row="2" column="1">
+    <widget class="QCheckBox" name="lowerCaseFileNamesCheckBox">
+     <property name="text">
+      <string>Lower case file names</string>
+     </property>
+    </widget>
+   </item>
+   <item row="3" column="0">
+    <widget class="QLabel" name="licenseTemplateLabel">
+     <property name="text">
+      <string>License Template:</string>
+     </property>
+    </widget>
+   </item>
+   <item row="3" column="1">
+    <widget class="Utils::PathChooser" name="licenseTemplatePathChooser" native="true"/>
+   </item>
+   <item row="4" column="0" colspan="2">
     <spacer name="verticalSpacer">
      <property name="orientation">
       <enum>Qt::Vertical</enum>
      </property>
      <property name="sizeHint" stdset="0">
       <size>
-       <width>20</width>
-       <height>430</height>
+       <width>0</width>
+       <height>20</height>
       </size>
      </property>
     </spacer>
    </item>
   </layout>
+  <zorder>licenseTemplatePathChooser</zorder>
+  <zorder>sourceSuffixLabel</zorder>
+  <zorder>headerSuffixLabel</zorder>
+  <zorder>lowerCaseFileNamesCheckBox</zorder>
+  <zorder>headerSuffixComboBox</zorder>
+  <zorder>sourceSuffixComboBox</zorder>
+  <zorder>licenseTemplateLabel</zorder>
+  <zorder>licenseTemplatePathChooser</zorder>
+  <zorder>sourceSuffixLabel</zorder>
+  <zorder>headerSuffixLabel</zorder>
+  <zorder>lowerCaseFileNamesCheckBox</zorder>
+  <zorder>headerSuffixComboBox</zorder>
+  <zorder>sourceSuffixComboBox</zorder>
+  <zorder>licenseTemplateLabel</zorder>
+  <zorder>licenseTemplatePathChooser</zorder>
+  <zorder>sourceSuffixLabel</zorder>
+  <zorder>headerSuffixLabel</zorder>
+  <zorder>lowerCaseFileNamesCheckBox</zorder>
+  <zorder>headerSuffixComboBox</zorder>
+  <zorder>sourceSuffixComboBox</zorder>
+  <zorder>licenseTemplateLabel</zorder>
+  <zorder>licenseTemplatePathChooser</zorder>
+  <zorder>sourceSuffixLabel</zorder>
+  <zorder>headerSuffixLabel</zorder>
+  <zorder>lowerCaseFileNamesCheckBox</zorder>
+  <zorder>headerSuffixComboBox</zorder>
+  <zorder>sourceSuffixComboBox</zorder>
+  <zorder>licenseTemplateLabel</zorder>
  </widget>
  <customwidgets>
   <customwidget>
