--- a/src/plugins/texteditor/displaysettingspage.ui
+++ b/src/plugins/texteditor/displaysettingspage.ui
@@ -89,6 +89,13 @@
         </property>
        </widget>
       </item>
+      <item row="5" column="0">
+       <widget class="QCheckBox" name="centerOnScroll">
+        <property name="text">
+         <string>Center &amp;cursor on scroll</string>
+        </property>
+       </widget>
+      </item>
      </layout>
     </widget>
    </item>
